--- a/app/src/main/res/layout/item_tree_folder.xml
+++ b/app/src/main/res/layout/item_tree_folder.xml
@@ -21,13 +21,13 @@
             android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/itemTreeFolderFolderIconLayout"
+                android:id="@+id/icon_item_tree_folder_folder_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingVertical="@dimen/_4sdp">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/itemTreeFolderArrowIcon"
+                    android:id="@+id/icon_item_tree_folder_arrow"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="@dimen/_16sdp"
@@ -35,7 +35,7 @@
                     app:srcCompat="@drawable/icon_triangle_right" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/itemTreeFolderFolderIcon"
+                    android:id="@+id/icon_item_tree_folder_folder"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:alpha="0.8"
@@ -43,7 +43,7 @@
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/itemTreeFolderText"
+                android:id="@+id/tv_item_tree_folder_folder"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_8sdp"
@@ -56,7 +56,7 @@
                 tools:text="폴더 1" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/itemTreeFolderCurrentPositionText"
+                android:id="@+id/tv_item_tree_folder_current_position"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="@dimen/_4sdp"
@@ -64,12 +64,12 @@
                 android:gravity="bottom"
                 android:maxLines="1"
                 android:paddingBottom="@dimen/_8sdp"
-                android:text="@string/current_position"
+                android:text="@string/tree_current_position"
                 android:textSize="@dimen/_6sdp"
                 android:visibility="gone" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/itemTreeFolderContentsSizeText"
+                android:id="@+id/tv_item_tree_folder_contents_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -80,7 +80,7 @@
                 tools:text="20" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/itemTreeFolderAddIcon"
+                android:id="@+id/icon_item_tree_folder_add"
                 setAddIcon2="@{folder.folderName}"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
