--- a/app/src/main/res/layout/item_main_recylcer_view.xml
+++ b/app/src/main/res/layout/item_main_recylcer_view.xml
@@ -8,8 +8,8 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_item_main_rv"
             android:nestedScrollingEnabled="false"
-            android:id="@+id/itemMainRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_4sdp"
@@ -19,10 +19,10 @@
             android:paddingTop="@dimen/_8sdp"
             android:paddingBottom="@dimen/_60sdp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_recycler_category" />
+            tools:listitem="@layout/item_category" />
 
         <FrameLayout
-            android:id="@+id/itemMainNoDataLayout"
+            android:id="@+id/tv_item_main_rv_no_data_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_4sdp"
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:alpha="0.5"
-                android:text="@string/no_data"
+                android:text="@string/all_no_data"
                 android:textSize="@dimen/_20sdp" />
         </FrameLayout>
 
