--- a/app/src/main/res/layout/layout_popup_list.xml
+++ b/app/src/main/res/layout/layout_popup_list.xml
@@ -19,33 +19,33 @@
                 android:orientation="vertical">
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/listPopupAddFolderText"
+                    android:id="@+id/tv_popup_list_create_folder"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/_8sdp"
                     android:paddingStart="@dimen/_12sdp"
                     android:paddingEnd="@dimen/_28sdp"
-                    android:text="@string/add_folder"
+                    android:text="@string/all_create_folder"
                     android:textSize="@dimen/_11sdp" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/listPopupSortText"
+                    android:id="@+id/tv_popup_list_sort_order"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/_8sdp"
                     android:paddingStart="@dimen/_12sdp"
                     android:paddingEnd="@dimen/_28sdp"
-                    android:text="@string/sort"
+                    android:text="@string/all_sort_order"
                     android:textSize="@dimen/_11sdp" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/listPopupRecycleBinText"
+                    android:id="@+id/tv_popup_list_recycle_bin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/_8sdp"
                     android:paddingStart="@dimen/_12sdp"
                     android:paddingEnd="@dimen/_28sdp"
-                    android:text="@string/recycle_bin"
+                    android:text="@string/menu_recycle_bin"
                     android:textSize="@dimen/_11sdp" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </com.google.android.material.card.MaterialCardView>
