--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -50,6 +50,6 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:navGraph="@navigation/nav_graph_search"
-            tools:layout="@layout/fragment_search_main" />
+            tools:layout="@layout/fragment_search" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
