--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -52,7 +52,7 @@
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/vp_search"
-                    tools:layout="@layout/fragment_search_main"
+                    tools:layout="@layout/fragment_search"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </androidx.appcompat.widget.LinearLayoutCompat>
