--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -27,28 +27,7 @@
                     android:background="@android:color/transparent"
                     app:tabIndicatorColor="?myColorControl"
                     app:tabSelectedTextColor="?myColorControl"
-                    app:tabTextAppearance="@style/myTextSize9sdp">
-
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="@string/all_top_cap" />
-
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="@string/all_bottom_cap" />
-
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="@string/all_outer_cap" />
-
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="@string/all_etc_cap" />
-                </com.google.android.material.tabs.TabLayout>
+                    app:tabTextAppearance="@style/myTextSize9sdp" />
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/vp_search"
