메인 리사이클러뷰, 서치 리사이클러뷰 결합

--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_item_search_rv"
+            android:id="@+id/rv_item_rv"
             android:nestedScrollingEnabled="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,7 +23,7 @@
             tools:listitem="@layout/item_category" />
 
         <FrameLayout
-            android:id="@+id/tv_item_search_rv_no_result_layout"
+            android:id="@+id/tv_item_rv_no_result_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_4sdp"
@@ -38,6 +38,24 @@
                 android:alpha="0.5"
                 android:text="@string/search_no_result"
                 android:textSize="@dimen/_10sdp" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/tv_item_rv_no_data_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:background="@drawable/recycler_background"
+            android:minHeight="@dimen/_540sdp"
+            android:visibility="gone">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:alpha="0.5"
+                android:text="@string/all_no_data"
+                android:textSize="@dimen/_20sdp" />
         </FrameLayout>
 
     </FrameLayout>
