--- a/app/src/main/res/layout/layout_popup_main.xml
+++ b/app/src/main/res/layout/layout_popup_main.xml
@@ -19,7 +19,7 @@
                 android:orientation="vertical">
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tv_popup_main_add_category"
+                    android:id="@+id/tv_popup_add_category"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/_8sdp"
@@ -29,7 +29,17 @@
                     android:textSize="@dimen/_11sdp" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tv_popup_main_sort_order"
+                    android:id="@+id/tv_popup_create_folder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_8sdp"
+                    android:paddingStart="@dimen/_12sdp"
+                    android:paddingEnd="@dimen/_28sdp"
+                    android:text="@string/all_create_folder"
+                    android:textSize="@dimen/_11sdp" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_popup_sort_order"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/_8sdp"
@@ -39,7 +49,7 @@
                     android:textSize="@dimen/_11sdp" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tv_popup_main_recycle_bin"
+                    android:id="@+id/tv_popup_recycle_bin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/_8sdp"
