--- a/app/src/main/res/drawable/item_contents_size_background.xml
+++ b/app/src/main/res/drawable/item_contents_size_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="?recyclerBackground" />
-    <solid android:color="?recyclerBackground" />
+    <stroke android:color="?attr/rvBackground" />
+    <solid android:color="?attr/rvBackground" />
     <corners
         android:bottomLeftRadius="@dimen/_28sdp"
         android:bottomRightRadius="@dimen/_28sdp"
